--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+body{
+  margin: -8px 0 0 -8px;
+}
+
 .all{
   height: 100vh;
   width: 100%;
@@ -11,11 +15,15 @@
 .title{
   position: absolute;
   z-index: 6;
-  margin: 350px 0 0 50%;
+  color: white;
+  font-size: 150px;
+  font-family: メイリオ;
+  margin-left: 50px;
 }
 
 .top-images img{
   object-fit: cover;
+
   height: 700px;
   width: 100%;
 }
