--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ body{
   animation-duration: 15s;
   animation-iteration-count: infinite;
   animation-name: slideIn;
-  animation-duration: 6.8s;
+  animation-duration: 15s;
 }
 
 .top-images img{
@@ -140,13 +140,16 @@ body{
     opacity: 0;
     transform: translateY(-64px);
   }
-  50%{
+  25%{
     opacity: 1;
     transform: translateY(0);
   }
-  100%{
+  45%{
     opacity: 0;
     transform: translateY(64px);
+  }
+  100%{
+    opacity: 0;
   }
 }
 
