--- a/top.css
+++ b/top.css
@@ -193,7 +193,6 @@ body{
   width: 100%;
   height: 700px;
   border: 1px solid black;
-  color: gray;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -239,19 +238,15 @@ body{
 
 .tourism-contents{
   display: flex;
-  flex-direction: row;
+  align-items: center;
   letter-spacing: 6px;
   line-height: 33px;
   border: 1px solid black;
-  height: 825px;
+  height: 1100px;
   width: 100%;
-  padding-top: 100px;
 }
 
 
-.tourism-images{
-  margin: 25px 0 0 50px;
-}
 
 @keyframes contents-album{
   0%{
@@ -270,33 +265,17 @@ body{
     opacity: 0;
   }
 }
-
-.tourism-images img{
-  object-fit: cover;
-  width: 700px;
-  height: 400px;
-}
-.tourism-img1{
-}
-.tourism-img2{
-}
-.tourism-img3{
-}
-
-.tourism-letter{
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  margin-left: 70px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 1.3s 0s ease-out;
+.tourism-title span{
+  font-size: 50px;
 
 }
 .tourism-title{
-  font-size: 50px;
-  margin: 25px 0;
+  font-size: 20px;
+  border-bottom: 8px solid gold;
+  margin-bottom: 50px;
+  width: 400px;
 }
+
 .tourism-explanation{
   font-size: 20px;
   margin-top: 30px;
@@ -319,6 +298,31 @@ body{
 
 .tourism-corner-btn a:hover{
   background-color: rgb(250, 230, 117);
+}
+.tourism-images{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 300px;
+
+}
+.tourism-images img{
+  object-fit: cover;
+  width: 520px;
+  height: 380px;
+}
+
+.tourism-letter{
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  flex-direction: column;
+  margin-left:100px;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 1.3s 0s ease-out;
+  
 }
 
 .gourmet-contents{
