--- a/top.css
+++ b/top.css
@@ -205,9 +205,9 @@ body{
 
 }
 .greeting-explanation{
-  width: 900px;
-  font-size: 20px;
-  letter-spacing: 10px;
+  width: 1100px;
+  font-size: 22px;
+  letter-spacing: 7px;
   opacity: 0;
   transform: translateY(20px);
   transition: all 1.3s 0s ease-out;
@@ -273,12 +273,11 @@ body{
   font-size: 20px;
   border-bottom: 8px solid gold;
   margin-bottom: 50px;
-  width: 400px;
+  width: 385px;
 }
 
 .tourism-explanation{
   font-size: 20px;
-  margin-top: 30px;
 }
 .tourism-corner-btn {
   margin-top: 60px;
@@ -286,18 +285,17 @@ body{
 }
 .tourism-corner-btn a{
   text-decoration: none;
-  border: 2px solid white;
-  color:white;
-  width: 500px;
-  height: 60px;
-  font-size: 30px;
+  border: 1px solid black;
+  color:black;
+  font-size: 15px;
   transition: background-color .5s;
-  padding: 15px 15px 15px 10px;
+  padding: 20px 80px 20px 10px;
   
 }
 
 .tourism-corner-btn a:hover{
-  background-color: rgb(250, 230, 117);
+  background-color: black;
+  color: white;
 }
 .tourism-images{
   display: flex;
@@ -322,136 +320,112 @@ body{
   opacity: 0;
   transform: translateY(20px);
   transition: all 1.3s 0s ease-out;
-  
 }
 
 .gourmet-contents{
-  background-color: beige;
-  height: 640px;
+  border:1px solid black;
+  letter-spacing: 6px;
+  line-height: 33px;
+  height: 825px;
   width: 100%;
-  padding-top: 100px;
+  display: flex;
+  align-items: center;
 }
 
-.gourmet-back{
-  display: flex;
-  color: white;
-  background-color:red;
-  height: 450px;
-}
 
 .gourmet-images{
-  position: relative;
-}
-
-.gourmet-images img{
-  object-fit: cover;
+  display: flex;
+  flex-direction: column;
   width: 700px;
-  height: 400px;
-  margin: 25px 0 0 50px ;
+  height: 500px;
+  margin-left: 100px;
+}
+.gourmet-image{
+  display: flex;
+  justify-content: space-between;
+}
+.gourmet-image img{
+  width: 330px;
+  height: 250px;
 }
 
-.gourmet-img1{
-  z-index: 3;
-  position: absolute;
-  animation-name: contents-album ;
-  animation-duration: 6s;
-  animation-iteration-count: infinite;
-}
-
-.gourmet-img2{
-  z-index: 2;
-  position: absolute;
-  animation-name: contents-album ;
-  animation-duration: 6s;
-  animation-delay: 2s;
-  animation-iteration-count: infinite;
-  opacity: 0;
-
-}
-
-.gourmet-img3{
-  z-index: 1;
-  position: absolute;
-  animation-name: contents-album ;
-  animation-duration: 6s;
-  animation-delay: 4s;
-  animation-iteration-count: infinite;
-  opacity: 0;
+.gourmet-img3 img{
+  width: 700px;
+  height: 250px;
 }
 
 .gourmet-letter{
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  margin-left: 800px;
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all 1.3s 0s ease-out;
+display: flex;
+flex-direction: column;
+margin-left: 120px;
 }
 
-.gourmet-title{
+.gourmet-title {
+  font-size: 20px;
+  margin-bottom: 50px;
+  border-bottom: 8px solid red;
+  width: 387px;
+
+  
+}
+.gourmet-title span{
   font-size: 50px;
-  margin: 25px 0;
+
+
 }
 .gourmet-explanation{
+  width: 400px;
   font-size: 20px;
-  margin-top: 30px;
 }
+
+
+
 .gourmet-corner-btn {
-  margin-top: 80px;
-  
+  margin-top: 70px;
 }
 .gourmet-corner-btn a{
   text-decoration: none;
-  border: 2px solid white;
-  color:white;
-  width: 500px;
-  height: 60px;
-  font-size: 30px;
+  border: 1px solid black;
+  color:black;
+  font-size: 15px;
   transition: background-color .5s;
-  padding: 15px 15px 15px 10px;
+  padding: 20px 80px 20px 10px;
   cursor:pointer;
 }
 
 .gourmet-corner-btn a:hover{
-  background-color: rgb(253, 115, 115);
-}
-.sports-content{
-  background-color: beige;
-  height: 500px;
-  width: 100%;
-  padding-top: 100px;
-}
-
-.sports-back{
-  display: flex;
+  background-color: black;
   color: white;
-  background-color:orange;
-  height: 450px;
+}
+.activity-contents{
+  height: 1100px;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
-.sports-images{
-  position: relative;
+
+.activity-images{
+  display: grid;
+  grid-template-columns: 300px 300px;
+  gap: 10px;
+
 }
 
-.sports-images img{
+.activity-images img{
   object-fit: cover;
-  width: 700px;
-  height: 400px;
+  width: 300px;
+  height: 200px;
   margin: 25px 0 0 50px ;
 }
 
-.sports-img1{
-  z-index: 3;
-  position: absolute;
+.activity-img1{
   animation-name: contents-album ;
   animation-duration: 6s;
   animation-iteration-count: infinite;
 }
 
-.sports-img2{
-  z-index: 2;
-  position: absolute;
+.activity-img2{
   animation-name: contents-album ;
   animation-duration: 6s;
   animation-delay: 2s;
@@ -460,9 +434,7 @@ body{
 
 }
 
-.sports-img3{
-  z-index: 1;
-  position: absolute;
+.activity-img3{
   animation-name: contents-album ;
   animation-duration: 6s;
   animation-delay: 4s;
@@ -470,29 +442,28 @@ body{
   opacity: 0;
 }
 
-.sports-letter{
-  width: 40%;
+.activity-letter{
+  width: 400px;
   display: flex;
   flex-direction: column;
-  margin-left: 50px;
   opacity: 0;
   transform: translateY(20px);
   transition: all 1.3s 0s ease-out;
 
 }
-.sports-title{
+.activity-title{
   font-size: 50px;
   margin: 25px 0;
 }
-.sports-explanation{
+.activity-explanation{
   font-size: 20px;
   margin-top: 30px;
 }
-.sports-corner-btn {
+.activity-corner-btn {
   margin-top: 60px;
   
 }
-.sports-corner-btn a{
+.activity-corner-btn a{
   text-decoration: none;
   border: 2px solid white;
   color:white;
@@ -504,7 +475,7 @@ body{
   cursor:pointer;
 }
 
-.sports-corner-btn a:hover{
+.activity-corner-btn a:hover{
   background-color:rgb(252, 205, 119);
 }
 
