--- a/top.css
+++ b/top.css
@@ -406,6 +406,8 @@ margin-left: 120px;
 
 
 .activity-images{
+  width: 650px;
+  height: 650px;
   display: grid;
   grid-template-columns: 300px 300px;
   gap: 10px;
@@ -416,7 +418,6 @@ margin-left: 120px;
   object-fit: cover;
   width: 300px;
   height: 200px;
-  margin: 25px 0 0 50px ;
 }
 
 .activity-img1{
@@ -452,8 +453,11 @@ margin-left: 120px;
 
 }
 .activity-title{
+  font-size: 20px;
+  border-bottom: 8  px solid lawngreen;
+}
+.activity-title span{
   font-size: 50px;
-  margin: 25px 0;
 }
 .activity-explanation{
   font-size: 20px;
@@ -479,44 +483,6 @@ margin-left: 120px;
   background-color:rgb(252, 205, 119);
 }
 
-.sports-type{
-  background-color: blue;
-  width: 450px;
-  margin: 25px 0 300px 250px;
-  display: none;
-
-}
-.sports-type.open{
-  list-style: none;
-  background-color: blue;
-  width: 450px;
-  margin: 25px 0 300px 250px;
-}
-
-.sports-type a{
-  text-decoration: none;
-  color: white;
-  transition: color .3s;
-
-}
-.sports-type a:hover{
-  color: gold;
-}
-
-.sports-type1{
-  font-size: 20px;
-  padding: 20px 0 20px 10px;
-}
-.sports-type2{
-  font-size: 20px;
-  padding: 20px 0 20px 10px;
-  border-top: 1px solid lightgray;
-  border-bottom: 1px solid lightgray;
-}
-.sports-type3{
-  font-size: 20px;
-  padding: 20px 0 20px 10px;
-}
 
 
 .footer{
