--- a/top.css
+++ b/top.css
@@ -192,7 +192,7 @@ body{
 .greeting-contents{
   width: 100%;
   height: 700px;
-  border: 1px solid black;
+  border-bottom: 1px solid black;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -472,7 +472,7 @@ transition: all 1.3s 0s ease-out;
 
 .access-contents{
   width: 100%;
-  height: 1770px;
+  height: 1830px;
   letter-spacing: 6px;
   line-height: 33px;
   border: 1px solid black;
@@ -508,6 +508,10 @@ transition: all 1.3s 0s ease-out;
 
 .access-method span{
   font-size: 40px;
+}
+.access-method {
+  font-size: 20px;
+  margin-bottom: 15px;
 }
 .access-method-contents{
   width: 100%;
