--- a/top.css
+++ b/top.css
@@ -655,8 +655,8 @@ footer{
   }
   .title1{
     font-size: 100%;
-    width: 150%;
-    height: 150%;
+    width: 270px;
+    height: 100px;
     margin: 30% 0 0 10%;
   }
   
@@ -666,16 +666,162 @@ footer{
 
   .greeting-contents{
     width: 100%;
+    height: 1050px;
+    border-bottom: 3px solid black;
+  }
+  section{
+    flex-direction: column;
   }
 
   .greeting{
     font-size: 30px;
+    transition: none;
+    transform: none;
+
   }
   
   .greeting-explanation{
   font-size: 20px;
   width: 90%;
+  transition: none;
+  transform: none;
+
   }
 
+  .tourism-contents{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    width: 100%;
+    height: 1000px;
+    border-bottom: 3px solid black;
+  }
+  .tourism-letter {
+    transition: none;
+    transform: none;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+  }
+  .tourism-letter show{
+    height: 700px;
+  }
+
+  .tourism-title{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    margin:0 0 0 30px;
+    border-bottom: 3px solid gold;
+    width: 270px;
+  }
+  .tourism-title span{
+    font-size: 30px;
+    animation: none;
+
+  }
+  .tourism-explanation{
+    width:90vw;
+    height: 330px;
+    margin: 20px 0 0 0;
+    font-size: 20px;
+    animation: none;
+  }
+
+  .tourism-corner-btn a{
+    background-color: black;
+    color: white;
+    animation: none;
+    padding: 20px 80px 20px 5px;
+
+  }
+  .tourism-images{
+    flex-direction: row;
+    width: 90%;
+    height: 10px;
+    margin:105px 0 0 0;
+  }
+  .tourism-images img{
+    object-fit: cover;
+    width: 100%;
+    height: 28vh;
+    margin-top: 40px;
+  }
+  .tourism-img1,.tourism-img2{
+    width: 50%;
+  }
+  
+  .gourmet-contents{
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    width: 100%;
+    height: 1000px;
+    border-bottom: 3px solid black;
+  }
+  .gourmet-letter {
+    transition: none;
+    transform: none;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+  }
+  .gourmet-letter show{
+    height: 700px;
+  }
+
+  .gourmet-title{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    margin:0 0 0 30px;
+    border-bottom: 3px solid red;
+    width: 330px;
+  }
+  .gourmet-title span{
+    font-size: 30px;
+    animation: none;
+
+  }
+  .gourmet-explanation{
+    width:90vw;
+    height: 250px;
+    margin: 20px 0 0 0;
+    font-size: 20px;
+    animation: none;
+  }
+
+  .gourmet-corner-btn {
+    margin: 0;
+  }
+  
+  .gourmet-corner-btn a{
+    width: 300px;
+    background-color: black;
+    color: white;
+    animation: none;
+    padding: 20px 60px 20px 5px;
+
+  }
+  .gourmet-img1{
+    display: none;
+  }
+
+  .gourmet-images {
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    margin: 15px 0 0 0;
+    
+  }
+  .gourmet-images img{
+    object-fit: cover;
+    width: 100%;
+    height: 30vh;
+  }
 
 }
