--- a/top.css
+++ b/top.css
@@ -823,5 +823,88 @@ footer{
     width: 100%;
     height: 30vh;
   }
+  .activity-contents{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 100px 0 0 0;
+    width: 100%;
+    height: 1000px;
+    border-bottom: 3px solid black;
+  }
+  .activity-letter {
+    transition: none;
+    transform: none;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+  }
+  .activity-letter show{
+    height: 700px;
+  }
 
+  .activity-title{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    margin:0 0 0 30px;
+    border-bottom: 3px solid lawngreen;
+    width: 270px;
+  }
+  .activity-title span{
+    font-size: 30px;
+    animation: none;
+
+  }
+  .activity-explanation{
+    width:90vw;
+    height: 250px;
+    margin: 20px 0 0 0;
+    font-size: 20px;
+    animation: none;
+  }
+
+  .activity-corner-btn a{
+    background-color: black;
+    color: white;
+    animation: none;
+    padding: 20px 80px 20px 5px;
+
+  }
+
+  .activity-images {
+    grid-template-columns: none;
+    gap: 0;
+    width: 100%;
+    margin: 13px 0 0 40px;
+    height: 300px;
+  }
+  .activity-images img{
+    object-fit: cover;
+    width: 90%;
+  }
+  .activity-img3,.activity-img4,.activity-img5,.activity-img6{
+    display: none;
+  }
+
+  .access-contents{
+    align-items: center;
+  }
+
+.access-title{
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  margin:0 0 0 30px;
+  border-bottom: 3px solid blue;
+  width: 270px;
+}
+
+.access-map iframe{
+  margin: 20px 0 0 20px;
+  width: 90%;
+  height: 300px;
+}
 }
