--- a/top.css
+++ b/top.css
@@ -627,6 +627,7 @@ footer{
   .all{
     flex-direction: column;
     justify-content: center;
+    max-width: 100%;
   }
   .top-contents{
      width: 100%;
@@ -639,14 +640,14 @@ footer{
     height: 50px;
     position: static;
     justify-content: space-between;
-    padding: 0 50px;
+    margin: 0 50px;
 
   }
 
   .main-menu li{
     font-size: 10px;
     writing-mode: horizontal-tb;
-    margin-top: 10px;
+    margin-top: 5px;
   }
 
   .top-images img{
@@ -661,7 +662,8 @@ footer{
     font-size: 100%;
     width: 270px;
     height: 100px;
-    margin: 30% 0 0 10%;
+    margin: 30% 0 0 0;
+    padding-left: 10px;
   }
   
   .title2,.title3,.title4,.title5,.title6{
@@ -695,7 +697,7 @@ footer{
   .tourism-contents{
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    padding-top: 50px;
     width: 100%;
     height: 800px;
     border-bottom: 3px solid black;
@@ -716,9 +718,9 @@ footer{
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    margin:0 0 0 30px;
+    margin:0;
     border-bottom: 3px solid gold;
-    width: 270px;
+    width: 265px;
   }
   .tourism-title span{
     font-size: 30px;
@@ -762,7 +764,7 @@ footer{
     justify-content: center;
     margin: 0;
     width: 100%;
-    height: 1000px;
+    height: 1100px;
     border-bottom: 3px solid black;
   }
   .gourmet-letter {
@@ -781,9 +783,9 @@ footer{
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    margin:0 0 0 30px;
+    margin-top:0px ;
     border-bottom: 3px solid red;
-    width: 330px;
+    width: 305px;
   }
   .gourmet-title span{
     font-size: 30px;
@@ -831,7 +833,7 @@ footer{
     align-items: center;
     margin: 50px 0 0 0;
     width: 100%;
-    height: 1000px;
+    height: 900px;
     border-bottom: 3px solid black;
   }
   .activity-letter {
@@ -842,7 +844,7 @@ footer{
     margin: 0;
   }
   .activity-letter show{
-    height: 700px;
+    height: 500px;
   }
 
   .activity-title{
@@ -850,7 +852,7 @@ footer{
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    margin:0 0 0 30px;
+    margin-top:10px;
     border-bottom: 3px solid lawngreen;
     width: 270px;
   }
@@ -861,7 +863,7 @@ footer{
   }
   .activity-explanation{
     width:90vw;
-    height: 250px;
+    height: 200px!important;
     margin: 20px 0 0 0;
     font-size: 20px;
     animation: none;
@@ -879,7 +881,8 @@ footer{
     grid-template-columns: none;
     gap: 0;
     width: 100%;
-    margin: 13px 0 0 40px;
+    margin: 0;
+    padding: 13px 0 0 40px;
     height: 300px;
   }
   .activity-images img{
@@ -901,14 +904,15 @@ footer{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
-  margin:0 0 0 30px;
+  font-size: 40px;
+  margin-left:100px;
   border-bottom: 3px solid blue;
-  width: 270px;
+  width: 180px;
 }
 
 .access-map iframe{
-  margin: 20px 0 0 20px;
+  margin:  0;
+  padding: 20px 0 0 20px;
   width: 90%;
   height: 300px;
 }
@@ -917,7 +921,8 @@ footer{
   width: 90%;
 }
 .access-guide{
-  margin: 0 0 0 20px;
+  margin: 0 ;
+  padding: 0 0 0 20px;
   width: 100%;
 }
 .access-place{
@@ -930,11 +935,12 @@ footer{
 
 .access-method-contents{
   width: 90%;
-  margin: 20px 0;
+  margin: 20px -50px 0 0 !important;
 }
 
 .access-method{
   font-size: 20px;
+  width: 90%;
 }
 .access-method span{
   font-size: 30px;
