--- a/top.css
+++ b/top.css
@@ -640,7 +640,7 @@ footer{
     height: 50px;
     position: static;
     justify-content: space-between;
-    margin: 0 50px;
+    padding: 0 50px;
 
   }
 
@@ -833,7 +833,7 @@ footer{
     align-items: center;
     margin: 50px 0 0 0;
     width: 100%;
-    height: 900px;
+    height: 1000px;
     border-bottom: 3px solid black;
   }
   .activity-letter {
@@ -882,12 +882,13 @@ footer{
     gap: 0;
     width: 100%;
     margin: 0;
-    padding: 13px 0 0 40px;
+    padding: 13px 0 0 10px;
     height: 300px;
   }
   .activity-images img{
     object-fit: cover;
-    width: 90%;
+    width: 98%;
+    height: 30vh;
   }
   .activity-img3,.activity-img4,.activity-img5,.activity-img6{
     display: none;
@@ -896,7 +897,7 @@ footer{
   .access-contents{
     align-items: center;
     width: 100%;
-    height: 1750px;
+    height: 1850px;
     border-bottom: 3px solid black;
   }
 
@@ -912,13 +913,13 @@ footer{
 
 .access-map iframe{
   margin:  0;
-  padding: 20px 0 0 20px;
-  width: 90%;
+  padding: 20px 0 0 10px;
+  width: 98%;
   height: 300px;
 }
 
 .access-root{
-  width: 90%;
+  width: 100%;
 }
 .access-guide{
   margin: 0 ;
